login & signup alignment fix

--- a/public/assets/css/hinder_style.css
+++ b/public/assets/css/hinder_style.css
@@ -14,12 +14,3 @@ html, body {
     padding-left: 30px;
     padding-right: 30px;
 }
-
-.uk-container {
-    box-sizing: content-box;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-}
